@@ -1,3 +1,8 @@
+Fri Mar 17 11:06:59 2000  Philippe De Muyter  <phdm@macqel.be>
+
+	* language.c (set_lang_str): Do not call `free' for a null pointer.
+        (set_type_str, set_range_str): Ditto.
+
 2000-03-16  Jim Blandy  <jimb@redhat.com>
 
         * i386-linux-nat.c (i386_linux_saved_pc_after_call): Lost in the
